reduced number of date options and removed car transport type

--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
         <h2>this date3</h2>
       </div>
 
+      <div class="container" id="date4">
+        <h2>this date4</h2>
+      </div>
+
+      <div class="container" id="date5">
+        <h2>this date5</h2>
+      </div>
+
+      <div class="container" id="date6">
+        <h2>this date6</h2>
+      </div>
+
     </div>
   </body>
 </html>
