reduced number of date options and removed car transport type

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </select>
 
 
-            <div class="radio">
+            <!-- <div class="radio">
               <label>
                 <input type="radio" name="car" value="sport" checked>
                 Sport car
@@ -50,7 +50,7 @@
                 <input type="radio" name="car" value="motorcycle" checked>
                 Motorcycle
               </label>
-            </div>
+            </div> -->
 
             <button type="submit" id="submitProfile" class="btn" name="button">Submit Your Dating Profile</button>
 
